@@ -53,7 +53,6 @@
     <slf4j.version>1.7.12</slf4j.version>
     <servlet-api.version>2.4</servlet-api.version>
     <jsp-api.version>2.0</jsp-api.version>
-    <aopalliance.version>1.0</aopalliance.version>
     <hsqldb.version>2.3.5</hsqldb.version>
     <junit.version>4.12</junit.version>
     <mockito.version>2.10.0</mockito.version>
@@ -281,12 +280,6 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>aopalliance</groupId>
-      <artifactId>aopalliance</artifactId>
-      <version>${aopalliance.version}</version>
-      <optional>true</optional>
-    </dependency>
 
 
     <dependency>
